# gemini-ollama-proxy

./: .containerignore  .editorconfig  .env.example  .gitignore  Containerfile  LICENSE  LICENSE.md  README.md  container-compose.yaml  pyproject.toml
src/: api.py  endpoints.py  logging_config.py  main.py  middleware.py  models.py
